Add auto-update feature

--- a/App/frmMain.resx
+++ b/App/frmMain.resx
@@ -212,4 +212,24 @@
         nWaW59Nk8h9kOBhD6Cfz6AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="tsbAutoupdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM2SURBVGhD7dlLyA5RHMfxx/1eLNxDkVJYKJJLLltLWdmw
+        kuS6kJDLhpCSWy5FQim9r5UoIsklGyUWNiIpRO5K7t/fYmqa/nPmnDnnqXcxv/ps3p75zznPvDNznv9p
+        NWnSNdID07EBnXiIl/iOX/iAx7iEzZiN7vBNN2zFR7zFGiTJWOyCiv4L9Ap7oRquaPCHUDx+PmpnBM7h
+        N4qFQ+kKncRwFKPBH4R13BYERwVXQZfSKhrjE5Yhi2vwshNB6Y8OWMVS0pXtB9fgJWgC+pd5AKtQO7w2
+        /lbkPYFBeASrSN4fXMcmzMEY6KoNwATMwzbcgz5r1QjhNQE9Hq/AKpD5iQMYD99MwlnoBrZq+vCawG5Y
+        B2fuYzLqZhqewqpdpXICU6Bv1zpYzqA3YjMQz2Cdw8U5AT3CbsM6UI4iRXSeI7DOUcU5gUWwDhLdE7o3
+        YqOlxHFY5/DhnMBlWAfpZTMSsdHgT8E6h6/SCYxD2RJBb+HY6N9G949VP0TpBFbAOkALtj6IzWJY9UOV
+        TmAlrAP2IEV2wKofqnQCo6D1e/7Dn2GtFutEy+B87brWoTQzcRdfoVf/DKTMWryBNbAqWobcwmA0adKk
+        SRfJEGj1WfeXkt7SejSmjB7depR/wR2ol1Sa9bAGFmouUkQvTQ08X1udkNKFpF7L+Q/XtREpomWLVX85
+        zKSawELEpi/ewaq/BGZSTGA/UkT3klVffdbS5UPsBNSVSBH1n8q6fmo/liZmAqkG3xPXYJ1D1MEoTd0J
+        pBq8fqWdgHUOuQhn6kxArRC1RGKjX3nqh1rnED1OR8OZuldATSnnpa3IVKg5ZtXOrEZlYu4BNQD0Dapd
+        6JuJOAxX40xOwysxE8hoGaJvczv0s1GDVGNXDV7twqi5q02Jm/gLq0beDfSCV3wm4NPyTuUq1BX3TtUE
+        tEelTYfzub+1yzHokRoU1wQ0eD3msmgbSB0667MxdIWXolb0v2kVLQ4+yzCor1l1E/r4Ad3QUV2GBSgW
+        VlFr8PloF2YftGVaPL7KC2jPeCiSRJvH+mHyHroiVYPPR83aWdCAtJn9BGqOaQfmG55De2wXoP6qNkVC
+        6jdp0p60Wv8BxZRjuih29BgAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
